--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "tutorials",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "underscore": "^1.8.3"
+  },
   "scripts": {
     "test": "gulp test"
   },
@@ -50,6 +52,7 @@
     "ng-annotate-loader": "0.0.10",
     "phantomjs": "~1.9.18",
     "uglify-save-license": "~0.4.1",
+    "underscore": "^1.8.3",
     "webpack-stream": "~2.1.1",
     "wiredep": "~2.2.2"
   },
